--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
                 <li>About us</li>
             </ul>
         </nav>
+        <main>
+            <section id="greeting">
+                <h1>welcome to my website!</h1>
+            </section>
+            <section id="our products">
+                <ul id="products">
+                    <li class="product-items">
+                        hammers
+                    </li>
+                    <li class="product-items">
+                        nails
+                    </li>
+                    <li class="product-items">
+                        chainsaws
+                    </li>
+                </ul>
+            </section>
+            <section id="latest-arrivals">
+                <h2>
+                    Latest Arrivals!
+                </h2>
+            </section>
+        </main>
     </div>
 
     <!-- Optional JavaScript -->
